--- a/api/templates/nft_list_item.html
+++ b/api/templates/nft_list_item.html
@@ -190,10 +190,11 @@
                             <option selected>
                                 <h5>Duración *</h5>
                             </option>
-                            <option value="24">24 horas</option>
-                            <option value="48">48 horas</option>
-                            <option value="7">7 días</option>
-                            <option value="30">1 Mes</option>
+                            <!--Acá los valores estan expresados en segundos-->
+                            <option value="86400">1 Día</option>
+                            <option value="172800">2 Días</option>
+                            <option value="604800">7 Días</option>
+                            <option value="2628003600">1 Mes</option>
                         </select>
                     </div>
                     <div class="col py-3">
