--- a/api/templates/order_completed.html
+++ b/api/templates/order_completed.html
@@ -103,26 +103,31 @@
                 </div>
                 <div class="col-2"></div>
                 <div class="col-3 cuadrados" style="border-radius: 1rem;">
-                    <h6 class="pt-2">Número de orden: {{order['_id']}}</h6>
+                    <h6 class="pt-3">Número de orden: {{order['_id']}}</h6>
+                    <hr>
                     <h6>Fecha: {{order['created_at']}}</h6>
-                    <h6>Total: {{order['total']}} ${{order['cart']['nft_currency']}}</h6>
+                    <h6 class="azul">Total: {{order['total']}} ${{order['cart']['nft_currency']}}</h6>
                     <h6>Cliente: {{order['client']['first_name']}} {{order['client']['last_name']}}</h6>
                     <h6>Documento: {{order['client']['document']}}</h6>
-                    <h6 class="azul">ID nuevo propietario: {{order['user_id']}} </h6>
+                    <hr>
+                    <h6 class="azul pb-2">ID nuevo propietario: {{order['user_id']}} </h6>
                 </div>
+                <br>
+
                 {% for x in order['cart'] %}
-                <div class="col-2 text-center">
+                <div class="col-2 text-center pt-5">
                     <img src="{{x['image_url']}}" style="border-radius: 1rem;" width="200rem">
                 </div>
-                <div class="col-3">
+                <div class="col-1 pt-5">
                     <h3>X {{x['quantity']}}</h3>
                     <h6 class="azul">{{x['name']}}</h6>
+                    <hr>
                     <h6>{{x['listed']['fixed_amount']}} ${{x['nft_currency']}}
                         <h6 class="text-secondary">{{x['description']}}</h6>
                 </div>
                 {% endfor %}
-                <div class="col-2"></div>
-                <div class="col text-center py-5">
+                <div class="col-3"></div>
+                <div class="col-12 text-center py-5">
                     <h3 class="azul">Pulsa Explorar para ver más perfiles de NFTS</h3>
                 </div>
             </div>
